--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -27,6 +27,22 @@ Final thesis on Evolutionary Algorithms graded with Honours. \smallskip \\
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Experience}
+  \begin{rSubsection}{Metabase Inc - \url{https://metabase.com}}{Jan 2021 - }{Software Engineer, Tech Lead}{Remote}
+  \item Maintenance of Cloud application management system for 1k+
+	  services. Managing signups, updates, snapshots...
+  \item Update cloud service for soc2 compliance (multi-az, encrypted dbs,
+	  etc.). Clojure, AWSLambda, Postgres, Terraform.
+  \item Improve ETL system, take it from 10h to 2h while reducing code over
+	  60\%. Python, AWS.
+  \item Migrate 1000+ cloud service from AWS ECS to K8s (EKS). Clojure, AWS,
+	  k8s.
+  \item Sample data generator for a db schema, producing plausible complete
+	  databases for stress tests, and generating of demo scenarios. Using a
+	  graph traversing algorithm to create foreign keys from the bottom up.
+  \item Relevant Books: Designing Data Intensive Applications, K8s Up \&
+	  Running, Philosophy of Software Design, Most Clojure literature, Chaos.
+  \end{rSubsection}
+
   \begin{rSubsection}{Kong Inc - \url{https://konghq.com}}{February 2018 - }{Software Engineer, Tech Lead}{Remote}
   \item Designing features for the enterprise grade customers of
     Kong. Usually higher traffic and custom flows that do not apply to
@@ -141,9 +157,9 @@ Final thesis on Evolutionary Algorithms graded with Honours. \smallskip \\
 
 \begin{rSection}{Skills}
 
-\item Programming Languages enthusiast. Working experience with Lua,
-  CommonLisp, Ruby, Perl, Python, Bash, a bit of js \& ts. Hobbist
-  experience with Smalltalk, Elisp, Clojure, Elixir, Rust, Go, Nim...
+\item Programming Languages enthusiast. Working experience with Clojure,
+	Lua, CommonLisp, Ruby, Perl, Python, Bash, a bit of js \& ts. Hobbist
+  experience with Smalltalk, Elisp, Elixir, Rust, Go, Nim...
 
 \item Working experience with REST, Postgres, Docker, sqlite , Redis,
   MongoDB, Redshift, Oracle, Cassandra, development\&productivity
