--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -30,11 +30,13 @@ Final thesis on Evolutionary Algorithms graded with Honours. \smallskip \\
   \begin{rSubsection}{Metabase Inc - \url{https://metabase.com}}{Jan 2021 - }{Software Engineer, Tech Lead}{Remote}
   \item Maintenance of Cloud application management system for 1k+
 	  services. Managing signups, updates, snapshots...
+  \item Design, program and maintain billing system for 2000+ with custom flows,
+	  grace periods, plans, etc...
   \item Update cloud service for soc2 compliance (multi-az, encrypted dbs,
 	  etc.). Clojure, AWSLambda, Postgres, Terraform.
   \item Improve ETL system, take it from 10h to 2h while reducing code over
 	  60\%. Python, AWS.
-  \item Migrate 1000+ cloud service from AWS ECS to K8s (EKS). Clojure, AWS,
+  \item Migration of 1000+ cloud service from AWS ECS to K8s (EKS). Clojure, AWS,
 	  k8s.
   \item Sample data generator for a db schema, producing plausible complete
 	  databases for stress tests, and generating of demo scenarios. Using a
